category property links to property
